--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="reveal" id="reveal">
       <p style="margin:0; font-weight:700;">Yay! 🎉</p>
-      <p style="margin:8px 0 0;">Dziś wieczorem: <b>kolacja + coś słodkiego</b>. A potem… spacer? 😉</p>
+      <p style="margin:8px 0 0;">Dobry wybór... <b>w nagrodę będzie buziaczek</b>. 😉</p>
     </div>
 
     <div class="small">Tip: możesz dodać imię w linku: <code>?imie=Ania</code></div>
