--- a/index.html
+++ b/index.html
@@ -67,21 +67,18 @@
 <body>
   <div class="card" id="card">
     <h1>Hej, <span id="name">Kochanie</span> 💘</h1>
-    <p>To moja walentynka dla Ciebie. Mam jedno pytanie…</p>
-    <p style="font-size:20px; font-weight:700;">Zostaniesz moją Walentynką?</p>
+    <p> Mam jedno pytanie…</p>
+    <p style="font-size:20px; font-weight:700;">Zostaniesz moją Walentynką? (wybierz dobrze)</p>
 
     <div class="btns">
       <button class="yes" id="yesBtn">TAK ❤️</button>
       <button class="no" id="noBtn">Nie 🙈</button>
-      <button id="copyBtn">Skopiuj link</button>
     </div>
 
     <div class="reveal" id="reveal">
       <p style="margin:0; font-weight:700;">Yay! 🎉</p>
       <p style="margin:8px 0 0;">Dobry wybór... <b>w nagrodę będzie buziaczek</b>. 😉</p>
     </div>
-
-    <div class="small">Tip: możesz dodać imię w linku: <code>?imie=Ania</code></div>
   </div>
 
   <script>
