--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="card" id="card">
-    <h1>Hej, <span id="name">Kochanie</span> 💘</h1>
+    <h1>Misiu Pysiu <span id="name">, Mój Królisiu</span> 💘</h1>
     <p> Mam jedno pytanie…</p>
     <p style="font-size:20px; font-weight:700;">Zostaniesz moją Walentynką? (wybierz dobrze)</p>
 
