--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="reveal" id="reveal">
-      <p style="margin:0; font-weight:700;">Yay! 🎉</p>
+      <p style="margin:0; font-weight:700;">Dobry wybór!</p>
       <p style="margin:8px 0 0;">Dobry wybór... <b>w nagrodę będzie buziaczek</b>. 😉</p>
     </div>
   </div>
