--- a/index.html
+++ b/index.html
@@ -254,13 +254,15 @@
     // Masz w repo: img/1.png ... img/7.png
     // USTAW correct:true przy tych numerach, gdzie jest "Twoja walentynka"
     const images = [
-      { src: "img/1.png", correct: false },
-      { src: "img/2.png", correct: false },
-      { src: "img/3.png", correct: false },
-      { src: "img/4.png", correct: false },
+      { src: "img/1.png", correct: true },
+      { src: "img/2.png", correct: true },
+      { src: "img/3.png", correct: true },
+      { src: "img/4.png", correct: true },
+      { src: "img/8.png", correct: false },
+      { src: "img/6.png", correct: true },
+      { src: "img/7.png", correct: true },
       { src: "img/5.png", correct: false },
-      { src: "img/6.png", correct: false },
-      { src: "img/7.png", correct: false },
+      { src: "img/9.png", correct: false },
     ];
 
     const grid = document.getElementById("grid");
