--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       { src: "img/8.png", correct: false },
       { src: "img/6.png", correct: true },
       { src: "img/7.png", correct: true },
-      { src: "img/5.png", correct: false },
+      { src: "img/5.png", correct: true },
       { src: "img/9.png", correct: false },
     ];
 
