--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         document.getElementById("gate").classList.add("hidden");
         document.getElementById("card").classList.remove("hidden");
       } else {
-        hint.textContent = "Nie tym razem 😄 Spróbuj jeszcze!";
+        hint.textContent = "CO?!!! Wybieraj jeszcze raz!";
       }
     });
 
