--- a/index.html
+++ b/index.html
@@ -214,12 +214,26 @@
       letter-spacing:.6px;
       margin:0 0 12px;
     }
+
+    .top-title{
+  width:min(560px, 92vw);
+  text-align:center;
+  font-weight:900;
+  font-size:clamp(22px, 4.5vw, 34px);
+  letter-spacing:.3px;
+  margin: 0 0 12px;
+  color:#111;
+  text-shadow: 0 10px 30px rgba(0,0,0,.12);
+  z-index: 2;
+}
   </style>
 </head>
 
 <body>
 
   <!-- ====== WERYFIKACJA (klasyczny wygląd) ====== -->
+  <div class="top-title">Potwierdź, że jesteś moim mężem</div>
+  
   <div class="captcha" id="gate" role="dialog" aria-label="Weryfikacja obrazkowa">
     <div class="captcha-header">
       <div class="captcha-title">Wybierz wszystkie obrazy z</div>
